Fix visibility of user steps menu. Fix #820

--- a/css/components/user-steps-menu.css
+++ b/css/components/user-steps-menu.css
@@ -7,7 +7,7 @@
 	padding: 11px 0;
 	/* Below rules needed for fixed view */
 	width: 100%;
-	z-index: 2;
+	z-index: 3;
 }
 .user-steps-menu a {
 	color: var(--white-text);
